@@ -8,7 +8,7 @@ jminor.server.admin.user=scott:tiger
 jminor.server.clientLoggingEnabled=true
 jminor.server.domain.classes=org.jminor.framework.demos.empdept.domain.EmpDept,\
   org.jminor.framework.demos.petstore.domain.Petstore,\
-  org.jminor.framework.demos.chinook.domain.Chinook,\
+  org.jminor.framework.demos.chinook.domain.ChinookDomain,\
   org.jminor.framework.demos.world.domain.World
 jminor.server.loginProxyClasses=org.jminor.framework.demos.empdept.server.EmpDeptLoginProxy
 jminor.server.pooling.startupPoolUsers=scott:tiger
